<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/qol_sur1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/shadow_corner"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="6dp">

    <TextView
        android:id="@+id/textQ1_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_round"
        android:gravity="center_horizontal|center"
        android:text="@string/qol_q1_10"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_width="match_parent"
        tools:textColor="#ffffff" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qol_q1"
                android:textColor="@android:color/black" />

            <RadioGroup
                android:id="@+id/RadioGroupLine1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_not_at_all"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/qol_surAnswer_not" />

                <RadioButton
                    android:id="@+id/rb_little"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/qol_surAnswer_little" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/RadioGroupLine2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_quite_a_bit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/qol_surAnswer_bit" />

                <RadioButton
                    android:id="@+id/rb_much"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/qol_surAnswer_much" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
